--- a/frontend/pages/painel-escola.html
+++ b/frontend/pages/painel-escola.html
@@ -1,100 +1,54 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/all.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <title>Montech - Painel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/painel.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <title>Painel Escolar - Montech</title>
 </head>
 
 <body>
-    <nav class="header-top">
-        <div class="turma-Top">
-            <i class="fas fa-bars text-white" id="OpenMenu"></i>
-            <span>20352GRA2GNB</span>
-        </div>
 
-        <form id="pesquisar-conjunto" class="form-inline">
-            <input id="pesquisa" class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Search">
-            <button id="pesquisa-botao" type=""><img src=alt="Pesquisar"></button>
-        </form>
-    </nav>
+  <header>
+    <div class="container-menu-name">
+      <i class="fas fa-bars" style="color: white;" id="menu"></i>
+      <p class="turma-nome" id="turma-nome">GRA0280102DNB</p>
+    </div>
 
-    <dialog class="menuDialog">
-        <i class="fas fa-times-circle" class="close"></i>
-        <div class="logo-menu">
-            <img src="/images/logo-montech-white.svg" style="width: 120px;" />
-        </div>
+    <div class="container-pesquisa">
+      <div class="pesquisa">
+        <input type="text" class="pesquisa-campo" placeholder="O que deseja procurar?">
+        <button type="submit" class="pesquisa-button">
+          <img src="/images/lupa.png" style="width: 35px;"></img>
+        </button>
+      </div>
+    </div>
+  </header>
 
-        <div>
-            <ul>
-                <li>Home</li>
-                <li>Notificação</li>
-            </ul>
-        </div>
-        </dialog>
+  <div class="sidebar" id="sidebar">
+    <div class="top-menu">
+      <img src="/images/logo-montech-white.svg" alt="logo" class="logo-menu">
+      <img src="/images/close.png" class="close" id="close" style="width: 15px;"></img>
+    </div>
 
-        <main class="main">
+    <ul>
+      <li> <img src="/images/home.png" class="icons-menu" alt=""> Inicio</li>
+      <li> <img src="/images/about.png" class="icons-menu" alt=""> Sobre</li>
+      <li> <img src="/images/settings.png" class="icons-menu" alt=""> Configurações</li>
+    </ul>
+  </div>
 
-            <button class="openDialog">Novo aluno</button>
+  <main>
 
-            <dialog class="addAlunoScreen">
-                funcionando
-                <button class="closeDialog">Fechar</button>
-            </dialog>
-            <table class="table">
-                <thead class="thead thead-dark">
-                    <tr>
-                        <th scope="col">#</th>
-                        <th style="width: 10%;" scope="col">Matricula</th>
-                        <th style="width: 30%;" scope="col">Nome</th>
-                        <th style="width: 10%;" cope="col">Idade</th>
-                        <th scope="col">Turma</th>
-                        <th scope="col">Status</th>
-                    </tr>
-                </thead>
+    <button>Add Aluno</button>
 
-                <tbody>
-                    <tr class="a1">
-                        <th scope="row">1</th>
-                        <td>01564896</td>
-                        <td>Carlos Augusto Ferreira da Silva</td>
-                        <td>19</td>
-                        <td class="row-turma">2NB</td>
-                        <td>Ativo</td>
-                    </tr>
+  </main>
 
-                    <tr class="a2">
-                        <th scope="row">2</th>
-                        <td>01564655</td>
-                        <td>Matheus Sena Diniz</td>
-                        <td>18</td>
-                        <td class="row-turma">2NB</td>
-                        <td>Ativo</td>
-                    </tr>
-
-                    <tr class="a3">
-                        <th scope="row">3</th>
-                        <td>01564988</td>
-                        <td>Maria Christina Santana</td>
-                        <td>20</td>
-                        <td class="row-turma">2NB</td>
-                        <td>Ativo</td>
-                    </tr>
-                </tbody>
-
-            </table>
-        </main>
-
-
-
-        <script src="../js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
