att de segurança

--- a/frontend/pages/painel-escola.html
+++ b/frontend/pages/painel-escola.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -13,9 +13,9 @@
 
 <body>
 
-  <header>
+  <header class="header" style="box-shadow: 15px 15px 10px 20px gray;">
     <div class="container-menu-name">
-      <i class="fas fa-bars" style="color: white;" id="menu"></i>
+      <i class="fas fa-bars" id="menu"></i>
       <p class="turma-nome" id="turma-nome">GRA0280102DNB</p>
     </div>
 
@@ -43,12 +43,26 @@
   </div>
 
   <main>
+    <div class="tools-painel">
+      <div>
+        <span>Alunos</span>
+        <span class="qtd-alunos" value="0">(2)</span>
+        <button class="open-cadastro-aluno" id="open-cadastro-aluno">Add Aluno</button>
+      </div>
 
-    <button>Add Aluno</button>
+      <div>
+
+      </div>
+    </div>
+
+    <dialog id="screen-cadastro-aluno">
+      <button id="close-cadastro-aluno">Fechar</button>
+      <button id="add-cadastro-aluno"1>Adicionar</button>
+    </dialog>
 
   </main>
 
-  <script src="/js/script.js"></script>
+  <script src="/js/painel.js"></script>
 </body>
 
 </html>
