--- a/frontend/pages/painel-escola.html
+++ b/frontend/pages/painel-escola.html
@@ -15,7 +15,7 @@
 
   <header class="header" style="box-shadow: 15px 15px 10px 20px gray;">
     <div class="container-menu-name">
-      <i class="fas fa-bars" id="menu"></i>
+      <img src="/images/menu.ico" id="menu" ></img>
       <p class="turma-nome" id="turma-nome">GRA0280102DNB</p>
     </div>
 
