--- a/frontend/home.html
+++ b/frontend/home.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <img class="logo" src="/images/logo-montech-white.svg" alt="Logo">
-            <ul class="nav-infos">
-                <li class="nav-infos-unidade"><a href="#">Entrar</a></li>
-                <li class="nav-infos-unidade"><a href="#">Contatos</a></li>
-                <li class="nav-infos-unidade"><a href="#">Sobre</a></li>
-            </ul>
+        <ul class='nav-infos'>
+            <li class='nav-infos-unidade'><a class="border-bottom-animation" href="#">Entrar</a></li>
+            <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Contatos</a></li>
+            <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Sobre</a></li>
+        </ul>
     </header>
 
     <div class="hero">
@@ -24,8 +24,7 @@
         <img class="slides" src="/images/slide2.png">
         <img class="slides" src="/images/slide3.png">
 
-        <div class="slide-buttons"
-            style="width:100%">
+        <div class="slide-buttons" style="width:100%">
 
             <div class="slide-buttons-individual slide-button-right" onclick="plusDivs(-1)">&#10094;</div>
             <div class="slide-buttons-individual slide-button-left" onclick="plusDivs(1)">&#10095;</div>
@@ -45,7 +44,7 @@
         a
     </footer>
 
-    <script src="/js/home-slide.js"></script>
+    <script src="/js/front/home-slide.js"></script>
 </body>
 
 </html>
