--- a/frontend/pages/login-responsavel.html
+++ b/frontend/pages/login-responsavel.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <title>Montech - Login Responsavel</title>
-    <link rel="stylesheet" href="/css/login-responsavel.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 
 <body>
-    <header>
-        <div class="logo-header">
-            <img src="/images/logo-montech-black.svg" style="width: 120px;" />
-        </div>
-    </header>
+    <a href="../home.html"><img class="logo" src="/images/logo-montech-white.svg" alt="Logo"></a>
+
     <main>
         <div class="login">
             <h2 class="text-login">Entre na sua conta</h2>
@@ -25,8 +22,8 @@
             <button class="button-entrar" type="submit"><a href="painel-escola.html">Entrar</a></button>
         </div>
 
-        <div class="apresentation-login">
-            <img src="/images/studying.png" alt="estudante">
+        <div class="apresentation-login" style="display: flex;">
+            <img src="/images/studying.svg"  alt="estudante">
         </div>
     </main>
 </body>
