--- a/frontend/home.html
+++ b/frontend/home.html
@@ -6,42 +6,117 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/plugins/fontawesome/css/all.min.css">
     <title>Montech - Home</title>
 </head>
 
 <body>
     <header>
-        <img class="logo" src="/images/logo-montech-white.svg" alt="Logo">
-        <ul class='nav-infos'>
-            <li class='nav-infos-unidade'><a class="border-bottom-animation" href="#">Entrar</a></li>
-            <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Contatos</a></li>
-            <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Sobre</a></li>
-        </ul>
+        <div class="header-logo">
+            <img class="logo" src="/images/logo-montech-white.svg" alt="Logo">
+            <ul class='nav-infos'>
+                <li class='nav-infos-unidade'><a class="border-bottom-animation" href="#">Entrar</a></li>
+                <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Contatos</a></li>
+                <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Sobre</a></li>
+            </ul>
+        </div>
+
+        <div class="hero">
+            <div class="hero-text">
+                <h1>lorem epsun lorem epsun</h1><br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, aperiam exercitationem aut
+                    explicabo
+                    omnis maiores. Accusantium velit blanditiis atque impedit unde. Iste ex libero voluptatem quidem
+                    facere
+                    nostrum deleniti aliquam.</p>
+                <button class="hero-text-button">Conferir</button>
+            </div>
+            <img class="hero-image" src="/images/hero-student.png">
+        </div>
     </header>
 
-    <div class="hero">
-        <img class="slides" src="/images/slide1.png">
-        <img class="slides" src="/images/slide2.png">
-        <img class="slides" src="/images/slide3.png">
 
-        <div class="slide-buttons" style="width:100%">
+    <section>
+        <!-- proposta --->
+        <article>
+            <h1 class="title-propostas">VANTAGENS DE UTILIZAR A MONTECH</h1>
+            <ul class="propostas">
+                <li class="proposta-card card1">
+                    <i class="fa-solid fa-bolt fa-2xl proposta-icon"></i>
+                    <h2 class="proposta-card-title">Maior Desenvolvimento</h2>
+                    <p class="proposta-card-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Animi,
+                        aspernatur laudantium,
+                        reiciendis illo laboriosam tempore in hic eveniet ea officia dicta, inventore sint? Id ab quos
+                        eum atque. Recusandae, voluptatem.</p>
+                </li>
+                <li class="proposta-card card2 ">
+                    <i class="fa-solid fa-fire fa-2xl proposta-icon"></i>
+                    <h2 class="proposta-card-title">Melhores Notas</h2>
+                    <p class="proposta-card-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Animi,
+                        aspernatur laudantium,
+                        reiciendis illo laboriosam tempore in hic eveniet ea officia dicta, inventore sint? Id ab
+                        quos
+                        eum atque. Recusandae, voluptatem.</p>
+                    </div>
+                </li>
+                <li class="proposta-card card3">
+                    <i class="fa-solid fa-brain fa-2xl proposta-icon"></i>
+                    <h2 class="proposta-card-title">Melhor Saude Mental</h2>
+                    <p class="proposta-card-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Animi,
+                        aspernatur laudantium,
+                        reiciendis illo laboriosam tempore in hic eveniet ea officia dicta, inventore sint? Id ab quos
+                        eum atque. Recusandae, voluptatem.</p>
+                </li>
+                <li class="proposta-card card4">
+                    <i class="fa-solid fa-heart fa-2xl proposta-icon"></i>
+                    <h2 class="proposta-card-title">Melhor Acompanhamento</h2>
+                    <p class="proposta-card-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Animi,
+                        aspernatur laudantium,
+                        reiciendis illo laboriosam tempore in hic eveniet ea officia dicta, inventore sint? Id ab quos
+                        eum atque. Recusandae, voluptatem.</p>
+                </li>
+                <li class="proposta-card card5">
+                    <i class="fa-regular fa-face-laugh-beam fa-2xl proposta-icon"></i>
+                    <h2 class="proposta-card-title">Melhor Humor</h2>
+                    <p class="proposta-card-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Animi,
+                        aspernatur laudantium,
+                        reiciendis illo laboriosam tempore in hic eveniet ea officia dicta, inventore sint? Id ab quos
+                        eum atque. Recusandae, voluptatem.</p>
+                </li>
+            </ul>
+        </article>
 
-            <div class="slide-buttons-individual slide-button-right" onclick="plusDivs(-1)">&#10094;</div>
-            <div class="slide-buttons-individual slide-button-left" onclick="plusDivs(1)">&#10095;</div>
+        <!-- Dados --->
+        <article>
+            <div>
+                <div>
 
-            <span onclick="currentDiv(1)"></span>
-            <span onclick="currentDiv(2)"></span>
-            <span onclick="currentDiv(3)"></span>
+                </div>
+                <div>
 
-        </div>
-    </div>
+                </div>
+            </div>
+        </article>
 
-    <main>
-        a
-    </main>
+        <!-- resultado esperado --->
+        <article>
+
+        </article>
+
+        <!-- sobre a equipe --->
+        <article>
+
+        </article>
+    </section>
 
     <footer>
-        a
+
     </footer>
 
     <script src="/js/front/home-slide.js"></script>
