inicio de mediaquery

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/profile.css">
     <link rel="stylesheet" href="/plugins/fontawesome/css/all.min.css">
     <title>Montech - Home</title>
 </head>
 
 <body>
+    <i class="fa-solid fa-circle-chevron-up upbutton fa-2xl" id="upScroll"></i>
+
     <header>
         <div class="header-logo">
             <img class="logo" src="/images/logo-montech-white.svg" alt="Logo">
@@ -40,7 +41,9 @@
     <section>
         <!-- proposta --->
         <article>
-            <h1 class="title-propostas">VANTAGENS DE UTILIZAR A MONTECH</h1>
+            <div class="container-title-article">
+                <h1 class="title-article">VANTAGENS DE UTILIZAR A MONTECH</h1>
+            </div>
             <ul class="propostas">
                 <li class="proposta-card card1">
                     <i class="fa-solid fa-bolt fa-2xl proposta-icon"></i>
@@ -95,6 +98,7 @@
         <!-- Dados --->
         <article>
             <div>
+
                 <div>
 
                 </div>
@@ -113,13 +117,15 @@
         <article>
 
         </article>
+
+
     </section>
 
-    <footer>
 
+    <footer>
     </footer>
 
-    <script src="/js/front/home-slide.js"></script>
+    <script src="/js/front/home.js"></script>
 </body>
 
 </html>
