--- a/frontend/pages/site/login-responsavel.html
+++ b/frontend/pages/site/login-responsavel.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    <a href="../home.html"><img class="logo" src="/images/logo-montech-white.svg" alt="Logo"></a>
+    <header>
+        <a href="../home.html"><img class="logo" src="/images/logo-montech-white.svg" alt="Logo"></a>
+        <ul class='nav-infos'>
+            <li class='nav-infos-unidade'><a class="border-bottom-animation" href="/pages/login-opcao.html">Entrar</a></li>
+            <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Contatos</a></li>
+            <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Sobre</a></li>
+        </ul>
+    </header>
 
     <main>
         <div class="login">
@@ -19,7 +26,7 @@
             <input class="psd form" type="password" id="senha" placeholder="Senha">
             <a class="forget" href="#">Recuperar os dados</a>
 
-            <button class="button-entrar" type="submit"><a href="painel-escola.html">Entrar</a></button>
+            <button class="button-entrar" type="submit"><a href="painel-responsavel.html">Entrar</a></button>
         </div>
 
         <div class="apresentation-login" style="display: flex;">
