--- a/frontend/pages/site/login-instituicao.html
+++ b/frontend/pages/site/login-instituicao.html
@@ -12,7 +12,7 @@
     <header>
         <a href="../home.html"><img class="logo" src="/images/logo-montech-white.svg" alt="Logo"></a>
         <ul class='nav-infos'>
-            <li class='nav-infos-unidade'><a class="border-bottom-animation" href="#">Entrar</a></li>
+            <li class='nav-infos-unidade'><a class="border-bottom-animation" href="/pages/login-opcao.html">Entrar</a></li>
             <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Contatos</a></li>
             <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Sobre</a></li>
         </ul>
