--- a/frontend/pages/site/login-instituicao.html
+++ b/frontend/pages/site/login-instituicao.html
@@ -29,7 +29,7 @@
 
             <a class="forget" href="#">Recuperar os dados</a>
 
-            <button class="button-entrar" type="submit"><a href="painel-escola.html">Entrar</a></button>
+            <button class="button-entrar" type="submit"><a href="/pages/escola/home-instituicao.html">Entrar</a></button>
         </form>
 
         <div class="apresentation-login">
