--- a/frontend/pages/site/login-responsavel.html
+++ b/frontend/pages/site/login-responsavel.html
@@ -26,7 +26,7 @@
             <input class="psd form" type="password" id="senha" placeholder="Senha">
             <a class="forget" href="#">Recuperar os dados</a>
 
-            <button class="button-entrar" type="submit"><a href="painel-responsavel.html">Entrar</a></button>
+            <button class="button-entrar" type="submit"><a href="/pages/responsavel/home-responsavel.html">Entrar</a></button>
         </div>
 
         <div class="apresentation-login" style="display: flex;">
