--- a/frontend/home.html
+++ b/frontend/home.html
@@ -22,7 +22,7 @@
                 <img class="logo" src="/images/logo-montech-white.svg" alt="Logo">
                 <ul class='nav-infos'>
                     <li class='nav-infos-unidade'><a class="border-bottom-animation"
-                            href="/pages/login-opcao.html">Entrar</a></li>
+                            href="/pages/site/login-opcao.html">Entrar</a></li>
                     <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Contatos</a></li>
                     <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Sobre</a></li>
                 </ul>
@@ -77,7 +77,6 @@
                             reiciendis illo laboriosam tempore in hic eveniet ea officia dicta, inventore sint? Id ab
                             quos
                             eum atque. Recusandae, voluptatem.</p>
-    </div>
     </li>
     <li class="proposta-card card3">
         <i class="fa-solid fa-brain fa-2xl proposta-icon"></i>
