--- a/frontend/pages/escola/salas-instituicao.html
+++ b/frontend/pages/escola/salas-instituicao.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/painel.css">
+    <link rel="stylesheet" href="/css/salas-instituicao.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -63,11 +64,80 @@
         </ul>
     </div>
 
+    <nav class="tools-painel">
+
+        <div class="tools-painel-sala">
+
+            <button type="button" class="btn btn-success mt-2 ml-2 add-aluno" data-toggle="modal"
+                data-target="#meuModal">Adicionar
+                Turma</button>
+            <div class="alunos-nav"><span> Turmas(</span> <span id="qtd-alunos" class="qtd-alunos">0</span>
+                <span>)</span>
+
+
+                <div id="meuModal" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+
+                        <div class="modal-content">
+
+                            <div class="modal-header">
+                                <h3>Cadastrar Novo Aluno</h3>
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+
+                            <!-- Corpo do modal -->
+                            <div class="modal-body">
+
+                                <form action="/action_page.php">
+
+                                    <div class="input-group mb-3">
+                                        <label class="input-group-text">Max. Alunos</label>
+                                        <input type="number" class="form-control" id="maxturma" placeholder="maxturma"
+                                            aria-label="maxturma" aria-describedby="basic-addon1" pattern="[1-9]{2}"
+                                            required />
+                                    </div>
+                                    </div>
+                                </form>
+
+                            </div>
+
+                            <!-- Rodapé do modal-->
+
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                                <button type="submit" onclick="addAluno()" class="btn btn-primary"
+                                    data-dismiss="modal">Adicionar
+                                    Aluno</button>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <main>
-        <h2>Bem-Vindo...</h2>
-        <P>Anotações</P>
-        <input class="anotacoes" type="text">
-        <button>Salvar</button>
+        <ul class="salas-cards">
+            <li id="turmas" class="salas-cards-uni">
+                <p>GRA0280102DNB</p>
+
+                <p>42 Alunos</p>
+            </li>
+            <li id="turmas" class="salas-cards-uni">
+                <p class="turma-title">GRA0280102DNA</p>
+                <p>42 Alunos</p>
+            </li>
+            <li id="turmas" class="salas-cards-uni">
+                <p class="turma-title">GRA0280102DNC</p>
+                <p>42 Alunos</p>
+            </li>
+            <li class="salas-cards-uni">
+                <p class="turma-title">GRA0280102DND</p>
+                <p>42 Alunos</p>
+            </li>
+        </ul>
     </main>
 
     <script src="/js/front/painel.js"></script>
