--- a/frontend/home.html
+++ b/frontend/home.html
@@ -22,7 +22,7 @@
                 <img class="logo" src="/images/logo-montech-white.svg" alt="Logo">
                 <ul class='nav-infos'>
                     <li class='nav-infos-unidade'><a class="border-bottom-animation"
-                            href="/pages/site/login-opcao.html">Entrar</a></li>
+                            href="/pages/site/login-instituicao.html">Entrar</a></li>
                     <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Contatos</a></li>
                     <li class='nav-infos-unidade'> <a class="border-bottom-animation" href="#">Sobre</a></li>
                 </ul>
