--- a/frontend/pages/escola/salas/painel-sala.html
+++ b/frontend/pages/escola/salas/painel-sala.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="/images/linkimage.png" >
+  <link rel="stylesheet" href="/">
   <link rel="stylesheet" href="/css/painel.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
@@ -60,9 +62,9 @@
         <li> <img src="/images/settings.png" class="icons-menu" alt=""> Configurações</li>
       </a>
 
-      <a href="">
+      <a href="../../../home.html">
         <li> <img src="/images/logout.png" class="icons-menu" alt=""> Sair</li>
-      </a>
+    </a>
     </ul>
   </div>
 
@@ -141,11 +143,7 @@
       </div>
     </div>
     <div class="config-sala">
-      <!--
-      <span>Confirgurações da Sala</span>
-      <img src="../images/settings.png" alt="" style="width: 30px; height: 30px;">
-    </div>
--->
+  
   </nav>
 
   <div class="container-table">
@@ -189,6 +187,7 @@
   </div>
 
   <script src="/js/front/painel.js"></script>
+  <script src="/js/front/slidebar.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
