--- a/frontend/pages/responsavel/home-responsavel.html
+++ b/frontend/pages/responsavel/home-responsavel.html
@@ -1,16 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/images/linkimage.png">
+    <link rel="stylesheet" href="/">
+    <link rel="stylesheet" href="/css/painel.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Painel Escolar - Montech</title>
 </head>
+
+
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+    @import "/css/cores.css";
+
+    .list-card-respo {
+        margin-top: 10%;
+        width: 100vw;
+        height: 20vw;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        padding: 80px;
+    }
+
+    .card-respo:hover {
+        background-color: #017171;
+        opacity: 90%;
+    }
+
+    .card-respo:active {
+        background-color: #044949;
+        opacity: 90%;
+    }
+
+    .card-respo {
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        justify-content: center;
+        background-color: #008C8C;
+        width: 250px;
+        height: 150px;
+    }
+
+    .img-card {
+        margin: 0 auto;
+        width: 40px;
+    }
+</style>
+
 <body>
 
-    <h1>Chegou mt cedo amigo, volte depois</h1>
-    <img src="/images/contrucao.png" alt="">
-    <a href="/home.html"><h1>Site em contrução</h1></a>
+    <header class="header">
+        <div class="container-menu-name">
+            <header class="header" style="display: flex; ">
+                <img src="/images/menu.ico" id="menu"></img>
+            </header>
+        </div>
 
+    </header>
+
+    <div class="sidebar" id="sidebar">
+        <div class="top-menu">
+            <img src="/images/logo-montech-white.svg" alt="logo" class="logo-menu">
+            <img src="/images/close.png" class="close" id="close" style="width: 15px;"></img>
+        </div>
+
+        <ul>
+            <a href="#">
+                <li> <img src="/images/home.png" class="icons-menu" alt=""> Inicio</li>
+            </a>
+
+            <a href="">
+                <li> <img src="/images/settings.png" class="icons-menu" alt=""> Configurações</li>
+            </a>
+
+            <a href="../../home.html">
+                <li> <img src="/images/logout.png" class="icons-menu" alt=""> Sair</li>
+            </a>
+        </ul>
+    </div>
+
+    <main>
+
+        <ul class="list-card-respo">
+            <a href="notas-responsavel.html">
+                <li class="card-respo">
+                    NOTAS
+                    <img class="img-card" src="/images/nota.png" alt="">
+                </li>
+            </a>
+
+            <a href="desempenho-responsavel.html">
+                <li class="card-respo">
+                    DESEMPENHO
+                    <img class="img-card" src="/images/desempenho.png" alt="">
+                </li>
+            </a>
+
+            <a href="permissoes-responsavel.html">
+                <li class="card-respo">
+                    PERMISSÕES
+                    <img class="img-card" src="/images/permissao.png" alt="">
+                </li>
+            </a>
+
+            <a href="advertencia-responsavel.html">
+                <li class="card-respo">
+                    ADVERTÊNCIAS
+                    <img class="img-card" src="/images/advertencia.png" alt="">
+                </li>
+            </a>
+        </ul>
+    </main>
+
+
+
+    <script src="/js/front/painel.js"></script>
+    <script src="/js/front/slidebar.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
