--- a/frontend/pages/site/login-instituicao.html
+++ b/frontend/pages/site/login-instituicao.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <title>Login Instituição - Montech</title>
+    <link rel="icon" type="image/x-icon" href="/images/linkimage.png" >
+
     <link rel="stylesheet" href="/css/login.css">
 </head>
 
